[gd_scene load_steps=3 format=3 uid="uid://cvvyt7shl1nu3"]

[ext_resource type="Theme" uid="uid://cfefgu8jbb3xm" path="res://Resources/Styles/default_theme.tres" id="1_2x6cf"]
[ext_resource type="Script" path="res://Scenes/Common/Buttons/Scripts/long_press_button.gd" id="1_aj1xq"]

[node name="LongPressButton" type="Button"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
theme = ExtResource("1_2x6cf")
flat = true
script = ExtResource("1_aj1xq")

[node name="LongPressTimer" type="Timer" parent="."]

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="button_up" from="." to="." method="_on_button_up"]
[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="timeout" from="LongPressTimer" to="." method="_on_long_press_timer_timeout"]
